Refactor responses messages using constants. Added 422 integration tests. Added 401 integration tests. Updated openapi
